--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,6 +40,10 @@ android {
         testImplementation 'junit:junit:4.12'
         testImplementation 'org.mockito:mockito-inline:3.11.1'
         testImplementation 'androidx.test:core:1.3.0'
+
+        implementation 'com.zhihu.android:matisse:0.5.3-beta3'
+        implementation 'com.github.bumptech.glide:glide:4.11.0'
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     }
 
 
